// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an ECS cluster with tags 1`] = `
"{
  \\"resource\\": {
    \\"aws_ecs_cluster\\": {
      \\"testECSCluster_ecs_cluster_E3A9AFE5\\": {
        \\"name\\": \\"bowling-\\",
        \\"setting\\": [
          {
            \\"name\\": \\"containerInsights\\",
            \\"value\\": \\"enabled\\"
          }
        ],
        \\"tags\\": {
          \\"description\\": \\"artist\\",
          \\"name\\": \\"maude\\"
        }
      }
    }
  }
}"
`;

exports[`renders an ECS cluster without tags 1`] = `
"{
  \\"resource\\": {
    \\"aws_ecs_cluster\\": {
      \\"testECSCluster_ecs_cluster_E3A9AFE5\\": {
        \\"name\\": \\"bowling-\\",
        \\"setting\\": [
          {
            \\"name\\": \\"containerInsights\\",
            \\"value\\": \\"enabled\\"
          }
        ]
      }
    }
  }
}"
`;
